# EsoCore

./: .cspell.json  .gitignore  404.html  CNAME  README.md  edge-erc.json  index.html
.github/: FUNDING.yml
.github/DISCUSSIONS/: general-discussion.md  q-and-a.md  show-and-tell.md
.github/DISCUSSION_TEMPLATE/: general-discussion.md  q-and-a.yml  show-and-tell.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  general_question.yml
.github/workflows/: pages.yml
assets/: bom.js  docs-app.js  site.js  theme.css
assets/icons/: icon.ai
assets/logo/: logo.ai
docs/: 404.html  README.md  api-specification.md  bom.md  business-model-and-partnerships.md  competitor-analysis.md  data-format-specification.md  development-environment.md  development-timeline-budget.md  fieldbus.md  hardware-requirements.md  imprint.html  index.html  license.md
docs/data/: bom-acoustic-sensor.csv  bom-cables.csv  bom-current-sensor.csv  bom-main.csv  bom-temperature-sensor.csv  bom-vibration-sensor.csv  bom.csv
firmware/: .gitignore  Makefile  README.md
firmware/common/: config_manager.h  event_system.h  power_management.h  protocol.h
hardware/: README.md
hardware/bom/: bom-acoustic-sensor.csv  bom-cables.csv
hardware/cables/: README.md
hardware/core/: README.md  bom.csv
hardware/edge/: README.md  bom.csv
portal/: .prettierignore  README.md  eslint.config.js  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
portal/components/: ThemeToggle.vue
server/: .gitignore  README.md  manage.py  package.json  pyproject.toml  requirements.txt
server/assets/: admin.py  models.py  serializers.py  urls.py  views.py
server/assets/migrations/: 0001_initial.py
server/devices/: admin.py  auth.py  models.py  serializers.py  urls.py  views.py
server/devices/migrations/: 0001_initial.py
server/edgesentinel_api/: settings.py
server/events/: admin.py  models.py  serializers.py  urls.py  views.py
server/events/migrations/: 0001_initial.py
server/iot/: urls.py  views.py
server/scripts/: format.py  lint.py
server/sentinel_api/: asgi.py  branding.py  settings.py  urls.py  wsgi.py
server/telemetry/: admin.py  models.py  serializers.py  urls.py  views.py
server/telemetry/migrations/: 0001_initial.py
server/templates/admin/: app_index.html  base_site.html  index.html
server/users/: admin.py  models.py  serializers.py  urls.py  views.py
server/users/migrations/: 0001_initial.py
software/: README.md
tools/: README.md  step_linter.py  sync_bom_data.py
website/: .prettierignore  .prettierrc  404.html  README.md  eslint.config.js  index.html  nuxt.config.ts  package.json  pnpm-lock.yaml  serve.json
website/assets/: bom.js  docs-app.js  site.js  theme.css
website/components/: SiteFooter.vue  SiteHeader.vue
website/content/: README.md  api-specification.md  bom.md  business-model-and-partnerships.md  cloud-infrastructure.md  competitor-analysis.md  data-format-specification.md  development-environment.md  development-timeline.md  edge-intelligence.md  esocore-edge.md  esocore-sensors.md  fieldbus.md  partner-contribution-agreement.md
website/docs/: 404.html  README.md  api-specification.md  (+18 more)
(+147 files in other folders)
