[tool.poetry]
name = "newmatik-esocore-server"
version = "0.1.0"
description = "EsoCore Django REST API"
authors = ["Newmatik"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
django = "5.2.5"
djangorestframework = "3.16.1"
django-cors-headers = "4.7.0"
djangorestframework-api-key = "3.1.0"
drf-spectacular = "0.28.0"
django-filter = "25.1"
python-dotenv = "1.0.0"
requests = "2.31.0"
psycopg2-binary = "2.9.10"
django-unfold = ">=0.65.0,<0.66.0"
django-crispy-forms = ">=2.4,<3.0"


[tool.poetry.group.dev.dependencies]
ruff = "0.6.9"
black = "24.4.2"
isort = "5.13.2"

# Scripts are defined in package.json style format for easier execution

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "T10", # flake8-debugger
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501", # Line too long, let black handle this
    "B008", # Do not perform function calls in argument defaults
    "C901", # Too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/migrations/*.py" = ["E501", "N805"]
"**/tests/*.py" = ["S101"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["edgesentinel_api", "sentinel_api", "devices", "users", "telemetry", "events", "iot", "assets"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

